@@ -34,6 +34,7 @@
     * 4155 FIX: Do not perform actions on events if overflow limit is active...
     * 4156 FIX: Fix off-by-one error in EC limit handling...
     * 4199 FIX: Fix detection of replication mode if EC is distributed...
+    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...
 
 
 1.4.0i3:
